# vusym

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.cmake  vasym_version.cpp.in  vusym.cpp  vusym.hpp  vusym_version.cpp.in  vusym_version.hpp  watchcat_version.cpp.in  watchcat_version.hpp
sym_gen/: CMakeLists.txt  README.md
sym_gen/vk_sym_gen/: sym_gen.cpp
